kustomize/apps/minio/minio-single-node/middlewares.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  name: add-host-header
  namespace: minio-single
spec:
  headers:
    customRequestHeaders:
      Host: "minio.minio-single.svc"
