kustomize/apps/minio/minio-single-node/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio-single
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: download.aipix.ai:8443/minio:latest
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9090
          volumeMounts:
            - mountPath: /data
              name: localvolume
      hostname: minio
      restartPolicy: Always
      imagePullSecrets:
        - name: download-aipix-ai
      volumes:
        - name: localvolume
          persistentVolumeClaim:
            claimName: minio-data
