kustomize/apps/minio/minio-single-node/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio-single
spec:
  ports:
    - name: "console"
      port: 9090
      protocol: TCP
      targetPort: 9090
      nodePort: 30090
    - name: "api"
      port: 9000
      protocol: TCP
      targetPort: 9000
      nodePort: 30900
  selector:
    app: minio
  type: NodePort
