kustomize/apps/minio/minio-single-node/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  namespace: minio-single
  name: minio-public
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`vms.example.com`) && PathPrefix(`/s3`)
    middlewares:
    - name: strip-prefix-s3
    - name: add-host-header
    services:
    - kind: Service
      name: minio
      port: 9000

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  namespace: minio-single
  name: minio-console
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host (`minio-console.example.com`)
    services:
    - kind: Service
      name: minio
      port: 9090
